syntax = "proto3";

package cn.yase.proto;

option java_package = "cn.yase.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc getRealByUserName(MyRequest) returns (MyResponse){}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}